package com.example.kp.Database;

public class Master extends DbHandler{
    public Master(){
        super("Master");
    }
}
