@startuml

title __DATABASE's Class Diagram__\n


    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Chat {
            + Chat()
        }
      }
    }

  


    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.DbHandler {
            + name : String
            ~ connection : Connection
            {static} - CON_STR : String
            {static} - instance : DbHandler
            + BuildDataSQL()
            + ChengeDateSQL()
            + DbHandler()
            + GetDataSQL()
            + Search()
            + buildDataall()
            ~ DbHandler()
            {static} ~ getInstance()
        }
      }
    }

  


    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Help {
            + Help()
        }
      }
    }

  


    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.LK {
            + ID_LK : int
            + Type_LK : int
            - Login : String
            - Password : String
            + LK()
            + LK()
            + login()
        }
      }
    }

  


    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Master {
            + Master()
        }
      }
    }

  

    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Pol {
            + Pol()
        }
      }
    }

  

  com.example.kp.Database.Chat -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Help -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.LK -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Master -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Pol -up-|> com.example.kp.Database.DbHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
